syntax = "proto3";

package password_service;

option go_package="pb/";

service PasswordService {
  rpc HashPassword(HashPasswordRequest) returns (HashPasswordResponse);
  rpc ValidatePassword(ValidatePasswordRequest) returns (ValidatePasswordResponse);
}

message HashPasswordRequest {
  string password = 1;
}

message HashPasswordResponse {
  string hashed_password = 1;
  string error = 2;
}

message ValidatePasswordRequest {
  string hashed_password = 1;
  string password = 2;
}

message ValidatePasswordResponse {
  bool valid = 1;
  string error = 2;
}
